--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.3.2
-Flask-SocketIO==5.3.1
+Flask-SocketIO==5.3.2
 eventlet==0.33.3
-redis==5.2.0
+redis==5.3.0
 python-dotenv==1.0.0
+gunicorn==21.2.0
